Add elasticsearch component
I had to increase memory allocated for VM to 6GB to be able
to run elasticsearch and apache kafka in VM.

--- a/deploy.yml
+++ b/deploy.yml
@@ -175,5 +175,12 @@
       - name: log_topic
 
   roles:
-    - zookeeper
-    - kafka
+    - mohsenSy.zookeeper
+    - mohsenSy.kafka
+- hosts: elasticsearch_servers
+  become: true
+  gather_facts: true
+
+  roles:
+    - mohsenSy.java
+    - mohsenSy.elasticsearch
